📝: Add Experience section and refactor background

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import About from '@components/sections/About.astro'
+import Experience from '@components/sections/Experience.astro'
 import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title='Andrés Florez'>
 	<About />
-	<About />
+	<Experience />
 	<About />
 </Layout>
