--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,8 +1,8 @@
 ---
 import Blob from '@components/logos/Blob.astro'
 ---
-<main class='flex justify-center items-center gap-96 flex-col h-screen font-playFlaire'>
-	<section class='text-black'>
+<section class='flex justify-center items-center gap-96 flex-col h-screen font-playFlaire'>
+	<header class='text-black'>
 		<div class='flex justify-center items-center'>
 			<h1 class='text-3xl sm:text-4xl md:text-6xl lg:text-8xl xl:text-[10rem] text-center'>Andrés Florez</h1>
 			<Blob />
@@ -11,10 +11,10 @@ import Blob from '@components/logos/Blob.astro'
 			<span>App Developer</span>
 			<span>Automation Engineer</span>
 		</div>
-	</section>
-	<section class='mx-auto px-5 text-center'>
+	</header>
+	<div class='mx-auto px-5 text-center'>
 		<span>
         Andrés loves planning, designing and find ways to solve real-life problems with code, furthermore he has a knack for fast-learning and autonomous learning.
 		</span>
-	</section>
-</main>
+	</div>
+</section>
