--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,3 +18,13 @@ const { title } = Astro.props;
 		<slot />
 	</body>
 </html>
+
+<style is:global>
+  .background {
+    background-image: url('/assets/background.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+</style>
