📝: remove pointer events

--- a/src/components/logos/Blob.astro
+++ b/src/components/logos/Blob.astro
@@ -1,7 +1,7 @@
 <img
 	src='/assets/andres.webp'
 	alt='Andres'
-	class='w-32 sm:w-56 text-center mx-auto bg-gray-200 rounded-full'
+	class='w-32 sm:w-56 text-center mx-auto bg-gray-200 rounded-full pointer-events-none'
 />
 
 <style>
