📝: add Experience details (not responsive yet)

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,4 +1,9 @@
-<section class='bg-black w-full h-screen font-playFlaire'>
+---
+import ExperienceItem from '@components/ExperienceItem.astro';
+
+---
+
+<section class='bg-black w-full font-playFlaire'>
 	<header class='mt-20'>
 		<h1 class='bg-text background text-transparent font-extrabold text-3xl sm:text-4xl md:text-6xl lg:text-8xl xl:text-[10rem] text-center'>
       Experience
@@ -6,21 +11,27 @@
 	</header>
 	<div class='max-w-5xl mx-auto'>
 		<ol class='ml-20 border-l border-neutral-300 text-white'>
-			<li>
-				<div class='flex-start flex items-center pt-3'>
-					<div
-						class='-ml-[10px] mr-3 h-[20px] w-[20px] rounded-full bg-neutral-300'></div>
-					<p class='text-lg'>
-            Dec.2022 - Present
-					</p>
-				</div>
-				<div class='mt-2 ml-4 mb-6'>
-					<h4 class='mb-1.5 text-xl font-semibold'>Senior developer React</h4>
-					<p class='mb-3'>
-            A cargo de múltiples desarrollos dentro de la celula de la empresa y desarrolladores Junior
-					</p>
-				</div>
-			</li>
+			<ExperienceItem date='2022 Dec-Present' position='Senior React Developer' company='Gestión de Seguridad Electrónica GSE'>
+        In charge of differents projects inside the company's cell and Junior developers.
+			</ExperienceItem>
+			<ExperienceItem date='2022 Nov-Dec' position='Researcher WEA 2022' company='Universidad de La Salle'>
+        Implementation of an algorithm with Machine Learning to recognize voice commands.
+			</ExperienceItem>
+			<ExperienceItem date='2022 Jul-Dic' position='FullStack Developer' company='Freelance'>
+        Developed an app for the management of the company's products and accouting where it was possible to significantly reduce time and improve the traceability of the information.
+			</ExperienceItem>
+			<ExperienceItem date='2022 Jan-Jul' position='Student Intern' company='Schlumberger'>
+        In charge of developing applications in Microsoft Azure and PowerApps for different areas of work within the company
+			</ExperienceItem>
+			<ExperienceItem date='2022 Mar-Jun' position='FullStack Developer' company='Universidad de La Salle'>
+        I developed an application for the monitoring of PLC microprocessors through different work connections.
+			</ExperienceItem>
+			<ExperienceItem date='2022 Mar-Jun' position='FullStack Developer' company='ITABooks'>
+        In charge of developing a web site, mobile app and backend.
+			</ExperienceItem>
+			<ExperienceItem date='2021-2022 Aug-Mar' position='Developer Research Assistant' company='Universidad de La Salle - Ecopetrol'>
+        Developer of full-stack web for the analysis of data and information in real-time from low-cost sensors for air quality in Bogotá.
+			</ExperienceItem>
 		</ol>
 	</div>
 </section>
