add responsive experience section

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -5,12 +5,12 @@ import ExperienceItem from '@components/ExperienceItem.astro';
 
 <section class='bg-black w-full font-playFlaire'>
 	<header class='mt-20'>
-		<h1 class='bg-text background text-transparent font-extrabold text-3xl sm:text-4xl md:text-6xl lg:text-8xl xl:text-[10rem] text-center'>
+		<h1 class='bg-text background text-transparent font-extrabold text-4xl sm:text-5xl md:text-7xl lg:text-8xl xl:text-[10rem] text-center'>
       Experience
 		</h1>
 	</header>
 	<div class='max-w-5xl mx-auto'>
-		<ol class='ml-20 border-l border-neutral-300 text-white'>
+		<ol class='ml-5 md:ml-20 border-l border-neutral-300 text-white'>
 			<ExperienceItem date='2022 Dec-Present' position='Senior React Developer' company='Gestión de Seguridad Electrónica GSE'>
         In charge of differents projects inside the company's cell and Junior developers.
 			</ExperienceItem>
