--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -7,21 +7,13 @@ const { date, position, company } = Astro.props
 		<div class='-ml-[10px] mr-3 h-[20px] w-[40px] rounded-sm background'></div>
 		<p class='text-lg'>
 			{date}
-			<div class='background ml-2 px-2.5 py-1.5 rounded-sm'>
-				<span class='text-black font-bold text-sm '>{company}</span>
-			</div>
+			<span class='text-black block sm:inline-block bg-gray-100 font-bold text-xs ml-2 px-2.5 py-1.5 rounded-sm'>{company}</span>
 		</p>
 	</div>
 	<div class='mt-2 ml-4 mb-6'>
 		<h4 class='mb-1.5 text-xl font-semibold'>{position}</h4>
-		<p class='mb-3'>
+		<p class='mb-3 mr-2'>
 			<slot />
 		</p>
 	</div>
 </li>
-
-<style>
-  span {
-    -webkit-background-clip: text;
-  }
-</style>
