--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -7,7 +7,7 @@ const { date, position, company } = Astro.props
 		<div class='-ml-[10px] mr-3 h-[20px] w-[40px] rounded-sm background'></div>
 		<p class='text-lg'>
 			{date}
-			<span class='text-black block sm:inline-block bg-gray-100 font-bold text-xs ml-2 px-2.5 py-1.5 rounded-sm'>{company}</span>
+			<span class='text-black block sm:inline-block bg-gray-100 font-bold text-sm ml-2 px-2.5 py-1.5 rounded-sm'>{company}</span>
 		</p>
 	</div>
 	<div class='mt-2 ml-4 mb-6'>
