--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -3,9 +3,9 @@ import ExperienceItem from '@components/ExperienceItem.astro';
 
 ---
 
-<section class='bg-black w-full font-playFlaire'>
+<section class='bg-[#1119] w-full font-playFlaire'>
 	<header class='mt-20'>
-		<h1 class='bg-text background text-transparent font-extrabold text-4xl sm:text-5xl md:text-7xl lg:text-8xl xl:text-[10rem] text-center'>
+		<h1 class='bg-text background text-transparent text-4xl sm:text-5xl md:text-7xl lg:text-8xl xl:text-[10rem] text-center'>
       Experience
 		</h1>
 	</header>
@@ -26,7 +26,7 @@ import ExperienceItem from '@components/ExperienceItem.astro';
 			<ExperienceItem date='2022 Mar-Jun' position='FullStack Developer' company='Universidad de La Salle'>
         I developed an application for the monitoring of PLC microprocessors through different work connections.
 			</ExperienceItem>
-			<ExperienceItem date='2022 Mar-Jun' position='FullStack Developer' company='ITABooks'>
+			<ExperienceItem date='2022 Mar-Jun' position='FullStack Developer' company='Freelance'>
         In charge of developing a web site, mobile app and backend.
 			</ExperienceItem>
 			<ExperienceItem date='2021-2022 Aug-Mar' position='Developer Research Assistant' company='Universidad de La Salle - Ecopetrol'>
